# dmn-tck-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  debug.yml  runner.yml
.run/: ALL.run.xml  DEBUG.run.xml
src/: config.rs  dto.rs  errors.rs  main.rs  model.rs  params.rs  results.rs  test-case-1.xml  test-case-2.xml  test-cases.xsd  utils.rs  validator.rs  validator_non_linux.rs
src/tests/: dto.rs  inputs-0001.json  inputs-0002.json  inputs-0003.json  mod.rs  model.rs  tc-0003.xml
